--- a/_posts/2024-06-26-new-post.md
+++ b/_posts/2024-06-26-new-post.md
@@ -42,7 +42,8 @@ authors: [sangyeop105]
 
 ```
 1. 보스 보호막 제거
-- 총 4개의 단상이 생성(어둠 2개, 빛 2개) 0.5네임드와 동일하게 각 속성에 맞는 티끌을 만든 후 모든 단상을 해독, 모든 단상이 해독되면 보스 딜페이즈 시작
+- 총 4개의 단상이 생성(어둠 2개, 빛 2개) 0.5네임드와 동일하게 각 속성에 맞는 티끌을 만든 후 모든 단상을 해독
+- 모든 단상이 해독되면 보스 딜페이즈 시작
 - 딜페이즈 시간동안 처지를 못할 시 이 동작을 반복
 ```
 클리어 후 봇룸 중앙에 포탈을 타고 이동
