--- a/_posts/2024-06-26-new-post.md
+++ b/_posts/2024-06-26-new-post.md
@@ -46,7 +46,7 @@ authors: [sangyeop105]
 - 모든 단상이 해독되면 보스 딜페이즈 시작
 - 딜페이즈 시간동안 처지를 못할 시 이 동작을 반복
 ```
-클리어 후 봇룸 중앙에 포탈을 타고 이동
+클리어 후 보스룸 중앙에 포탈을 타고 이동
 
 ## 1.5네임드
 
