타이틀 수정

--- a/_posts/2024-06-26-new-post.md
+++ b/_posts/2024-06-26-new-post.md
@@ -1,7 +1,7 @@
 ---
 title: 데스티니 예언 공략
 date: 2024-06-26 00:00:00 +0900
-categories: [SPRING, JAVA, MAC, GRADLE]
+categories: [Destiny2, Dungeon, MAC, GRADLE]
 tags: [destiny2]  # TAG names should always be lowercase
 authors: [sangyeop105]
 ---
